<?xml version="1.0"?>
<package format="2">
  <name>dji_comm</name>
  <version>0.1.9</version>
  <description>DJI ros interface</description>

  <maintainer email="fmina@ethz.ch">Mina Kamel</maintainer>

  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>dji_sdk_lib</depend>
  <depend>roscpp</depend>

</package>
