<?xml version="1.0"?>
<package format="2">
  <name>dji_comm</name>
  <version>0.1.9</version>
  <description>DJI ros interface</description>

  <maintainer email="fmina@ethz.ch">Mina Kamel</maintainer>
  <maintainer email="inkyu.sa@mavt.ethz.ch">Inkyu Sa</maintainer>

  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>dji_sdk_lib</depend>
  <depend>roscpp</depend>

</package>
